# ChessEngine

./: .gitignore  Board.cpp  Board.h  BoardOptimized.cpp  BoardOptimized.h  CMakeLists.txt  Chess.cpp  Chess.h  Engine.cpp  Engine.h  Move.h  NetworkHandler.cpp  NetworkHandler.h  Player.h  StaticEvaluator.cpp  StaticEvaluator.h  Timer.cpp  Timer.h  main.cpp  pch.h
